--- a/skel/Template.html
+++ b/skel/Template.html
@@ -2,13 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Hello, world!</title>
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js?ver=2.0.3"></script>
+		<title></title>
 	</head>
 	<body>
-		<header>
-			<h1>Hello, world!</h1>
-		</header>
 	</body>
 </html>
 
